fix pseudo-elements covering buttons

--- a/src/styles/product/article-overview.scss
+++ b/src/styles/product/article-overview.scss
@@ -15,6 +15,7 @@
       content: '';
       display: block;
       height: 100%;
+      pointer-events: none;
       position: absolute;
       top: 0;
       width: 100%;
